boxes are aligned correctly but styling sucks

--- a/src/scss/_timeline.scss
+++ b/src/scss/_timeline.scss
@@ -26,11 +26,11 @@ nav.tabs {
 			text-decoration: none;
 			display: inline-block;
       position: relative;
-      bottom: -10px;
+      bottom: -12px;
       font-size: 15pt;
       padding: 2% 0;
       background: #fafafa;
-      color: $light-teal;
+      color: #c3c3c3;
       font-weight: 700;
       // border-right: 1px solid #ddd;
 			width: 49.5%;
@@ -38,7 +38,7 @@ nav.tabs {
 
       &.active {
         color: #000000;
-        border-top: 3px solid $green;
+        border-top: 3px solid $teal;
         border-right: 1px solid #ddd;
 				border-left: 1px solid #ddd;
         border-bottom: 2px solid #ffffff;
@@ -47,19 +47,26 @@ nav.tabs {
   }
 }
 
+button.save {
+  text-align: center;
+  margin: 0 auto 5px auto;
+  display: block;
+}
 
 section.main-content.timeline {
 	margin: 0px 10px 0 0;
 	width: 100%;
-	background: #fff;
+	// background: #fff;
 
 	section.tlv {
 		position: relative;
+    background: #fff;
+
     h3{
       text-align: center;
 			font-weight: 300;
-			margin: 30px auto;
-
+      margin: 0;
+      padding-top: 30px;
     }
 		ul {
       margin: 0px auto;
@@ -169,71 +176,105 @@ section.main-content.timeline {
 							display: block;
 						}
 					}
+
+    article.event {
+      margin-bottom: 1ex;
+      width: 47%;
+      color: $dark;
+      outline: 1px solid #000;
+      padding: 1%;
+
+        &:nth-of-type(odd) {
+          float: left;
+          text-align: right;
+          padding-right: 5px;
+          position: relative;
+
+          &::before{
+            position: absolute;
+            right: -12px;
+            font-family: 'FontAwesome';
+            content: "\f0da  ";
+            font-size: 2em;
+            color: $dark;
+          } //caret
+        }
+
+        &:nth-of-type(even) {
+          float: right;
+          text-align: left;
+          padding-left: 5px;
+          position: relative;
+
+          &:first-of-type {
+            margin-top: 30px;
+          }
+          &::before{
+            position: absolute;
+            left: -12px;
+            font-family: 'FontAwesome';
+            content: "\f0d9  ";
+            font-size: 2em;
+            color: $dark;
+          }
+        }
+
           a.event-card {
-            margin-bottom: 1ex;
-            width: 47%;
+            @extend .clearfix;
+            margin-bottom: .5ex;
+            width: 100%;
             text-decoration: none;
             color: #fff;
             border: 2px solid $dark;
             border-radius: 3px;
 						background: $dark;
 						padding: 1%;
-            &:nth-of-type(odd) {
-              float: left;
-              text-align: right;
-              padding-right: 5px;
-              position: relative;
 
-              &::before{
-                position: absolute;
-                right: -12px;
-                font-family: 'FontAwesome';
-                content: "\f0da  ";
-                font-size: 2em;
-								color: $dark;
-              } //caret
-            }
-            &:nth-of-type(even) {
-              float: right;
-              text-align: left;
-              padding-left: 5px;
-              position: relative;
-
-              &:first-of-type {
-                margin-top: 30px;
-              }
-              &::before{
-                position: absolute;
-                left: -12px;
-                font-family: 'FontAwesome';
-                content: "\f0d9  ";
-                font-size: 2em;
-								color: $dark;
-              }
-            }
-            span.event-name{
+            span.event-name {
               font-size: 1em;
               font-weight: 500;
               display: block;
+
             }
-            span.event-location{
-              font-size: 0.8em;
-              font-weight: 300;
-              display: block;
+
+      } // end event-card
+
+            span.event-location {
+              // font-size: 0.7em;
+              // font-weight: 300;
+              // display: block;
             }
-            span.event-date{
-              font-size: 0.7em;
-              font-weight: 300;
-              display: block;
+
+            span.event-date {
+              // font-size: 0.7em;
+              // font-weight: 300;
+              // display: block;
+              // color: $dark;
             }
-            span.event-phone{
-              font-size: 0.7em;
-              font-weight: 300;
-              display: block;
+
+            span.event-phone {
+              // font-size: 0.7em;
+              // font-weight: 300;
+              // display: block;
+              // color: $dark;
             }
-          } //event card
-        } //li.city-desc
-			} //city section
+
+
+        section.details {
+          display: block;
+          color: $dark;
+          font-size: .8em;
+
+            .event-location {
+
+            }
+        }
+
+
+      } // article event
+    } // li.city-desc
+	} // city section
+
 			&.city-section::before {
 				display: block;
 				content: '';
