--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -175,12 +175,13 @@ header {
 
 h2.heading {
   font-weight: 400;
-  letter-spacing: 3px;
+  letter-spacing: 2px;
   text-align: center;
   margin: 20px auto;
   padding: 0;
   font-family: 'Oswald', sans-serif;
   color: $dark;
+  width: 90%;
   // background-image: url("https://s-media-cache-ak0.pinimg.com/736x/b3/09/ed/b309eddd57990b734c72791f5a57a4ac.jpg");
 }
 
